Update hamburger icon style and size

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <img src="https://ik.imagekit.io/lql1uveoc/IMG_9614.PNG?updatedAt=1750437382543" alt="Logo">
     </a>
     <nav class="nav-links">
-        <div class="hamburger-icon" style="color:white; font-size: 20px;">☰</div>
+        <div class="hamburger-icon" style="color:#FFFFFF; font-size: 24px;">☰</div>
         <a href="https://www.youtube.com/@TonyOnlineEnglish" target="_blank" class="pill-btn">
             <img src="https://ik.imagekit.io/lql1uveoc/Banner%20Front%20page/youtube.png" class="social-icon">
             <span>YouTube</span>
