Modify loading overlay text and structure
Updated loading overlay text and removed calendar mode line.

--- a/25mbk.html
+++ b/25mbk.html
@@ -936,8 +936,8 @@
   <div class="spinner"></div>
   <div id="loadingText">載入中...</div>
   <!-- Modified: Larger text, removed calendar mode line -->
-  <div class=“loading-subtext">
-    <div>Tony線上美語家教 </div>
+  <div class="loading-subtext">
+    <div>Tony線上美語家教 </div>  
     <div>支援多堂預約</div>    <div>正在進入25分鐘課程預約系統</div>
 
   </div>
