Add font size to hot-btn in booking.html

--- a/booking.html
+++ b/booking.html
@@ -602,6 +602,7 @@
       background: #ffffff; border: 1px solid #ffd0c0; color: #333; padding: 12px;
       border-radius: 12px; text-align: left; font-weight: bold; cursor: pointer;
       display: flex; justify-content: flex-start; align-items: center;
+      /* --- 修改或新增下面這一行 --- */ font-size: 18px;  /* 您可以根據需求調整，例如 18px 或 20px */ 
     }
     .tap-icon {
         width: 20px; height: 20px; margin-left: 8px; display: inline-block; vertical-align: middle;
