Update loading text and add new content

--- a/booking.html
+++ b/booking.html
@@ -943,7 +943,8 @@
   <div id="loadingText">載入中...</div>
   <!-- Modified: Larger text, removed calendar mode line -->
   <div class="loading-subtext">
-    <div>支援多堂預約</div>    <div>進入50分鐘預約課程</div>
+<div>Tony線上美語家教</div>
+<div>支援多堂預約</div>    <div>進入50分鐘預約課程</div>
 
   </div>
 </div>
