--- a/2026new.html
+++ b/2026new.html
@@ -143,20 +143,11 @@
             <!-- 手機版字體 text-2xl -->
             <h2 class="text-2xl md:text-2xl font-bold mb-6 text-gray-800">親愛的家長您好 ，</h2>
             
-            <div class="border-l-4 border-blue-500 bg-gray-50 p-5 rounded-r-lg mb-6">
+            <div class="border-l-4 border-blue-500 bg-gray-50 p-5 rounded-r-lg">
                 <!-- 手機版字體 text-lg -->
                 <p class="text-gray-800 text-lg md:text-base font-medium leading-relaxed">
-                    Tony線上美語家教 於2026.01.01 開始有新的調整。
+                    自 2026年1月1日 起，您可依需求選擇課程方案：
                 </p>
-            </div>
-            
-            <!-- Date Notice -->
-            <div class="text-blue-700 font-bold text-lg md:text-lg flex flex-col md:flex-row md:items-center">
-                <span class="flex items-center mb-2 md:mb-0">
-                    <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
-                    自 2026年1月1日 起，
-                </span>
-                <span class="md:ml-1">您可依需求選擇課程方案：</span>
             </div>
         </div>
 
