Update booking links for trial courses

--- a/exper.html
+++ b/exper.html
@@ -343,8 +343,8 @@
 
 <script>
     const products = [
-        { id: 'trial-25', name: '體驗課程25分鐘', price: 350, bookingLink: 'https://tonyonlineenglish.setmore.com/services/e2482488-9727-40ce-87f4-3a12700d8d74' },
-        { id: 'trial-50', name: '體驗課程50分鐘', price: 550, bookingLink: 'https://tonyonlineenglish.setmore.com/services/3de1afad-6f57-4b4f-8ba8-0185f3e039d5' }
+        { id: 'trial-25', name: '體驗課程25分鐘', price: 350, bookingLink: 'https://tonyonlineenglish.netlify.app//25mbk' },
+        { id: 'trial-50', name: '體驗課程50分鐘', price: 550, bookingLink: 'https://tonyonlineenglish.netlify.app/booking' }
     ];
     const logoUrl = "https://ik.imagekit.io/lql1uveoc/Abstract%20Special%20Offer%20Announcement%20Free%20Facebook%20Post.png?updatedAt=1754673537869";
     let cart = {};
